test/scc/expr/semantic-errors/001.a
001.t:4:6: error: subscripted value is not array, pointer, or vector